logs/Slang/generated/keywords/5.6.2--keyword_function.sv.log
name: keyword_function
description: The 'function' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_function.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_function.sv:8:8: error: expected declarator
    bit function;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_function.sv:8:17: error: expected identifier
    bit function;
                ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_function.sv:8:18: error: expected 'endfunction'
    bit function;
                 ^
